felsökte och korrigerade bara svenska knappen, javascrip från sv till ja

--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                     filteredData = filteredData.filter(row => row[6]?.toLowerCase() === 'ja');
                 }
                 if (isLangFilterActive) {
-                    filteredData = filteredData.filter(row => row[7]?.toLowerCase() === 'sv');
+                    filteredData = filteredData.filter(row => row[7]?.toLowerCase() === 'ja');
                 }
 
                 console.log('Filtered data:', filteredData);
@@ -712,7 +712,7 @@
                     filteredData = filteredData.filter(row => row[6]?.toLowerCase() === 'ja');
                 }
                 if (isLangFilterActive) {
-                    filteredData = filteredData.filter(row => row[7]?.toLowerCase() === 'sv');
+                    filteredData = filteredData.filter(row => row[7]?.toLowerCase() === 'ja');
                 }
 
                 console.log('Filtered data:', filteredData);
