--- a/index.html
+++ b/index.html
@@ -677,10 +677,10 @@
             console.log('Search term:', searchTerm);
 
             if (searchForDishes) {
-                // Sökning baserat på maträttsnamn
+                // Search based on dish name
                 let filteredData = allData.filter(row => row[0].toLowerCase().includes(searchTerm));
 
-                // Filtrera för vegetariska och svenska recept om aktiverat
+                // Filter for Vegetarian and Swedish recipes if activated
                 if (isVegFilterActive) {
                     filteredData = filteredData.filter(row => row[6]?.toLowerCase() === 'ja');
                 }
@@ -691,16 +691,26 @@
                 console.log('Filtered data:', filteredData);
                 displayData(filteredData);
             } else {
-                // Sökning baserat på ingredienser
-                let ingredientOrSynonym = ingredientSynonyms[searchTerm] || searchTerm;
-                let searchIngredients = groupedIngredients[ingredientOrSynonym] || [ingredientOrSynonym];
+                // For each selected tag, find matching individual ingredients or grouped ingredients
+                let searchIngredients = selectedTags.flatMap(tag => {
+                    if (groupedIngredients[tag]) {
+                        return groupedIngredients[tag];
+                    } else if (ingredientSynonyms[tag]) {
+                        let primaryIngredient = ingredientSynonyms[tag];
+                        return groupedIngredients[primaryIngredient] || [primaryIngredient];
+                    } else {
+                        return [tag];
+                    }
+                });
+                console.log('Ingredients to search for:', searchIngredients);
 
                 let filteredData = allData.filter(row => {
                     const ingredients = row[1]?.toLowerCase().split(', ').map(ing => ing.trim());
-                    return searchIngredients.some(ingredient => ingredients.includes(ingredient));
+                    // Ensure that ALL selected tags are present in the ingredient list
+                    return searchIngredients.every(ingredient => ingredients.includes(ingredient));
                 });
 
-                // Filtrera för vegetariska och svenska recept om aktiverat
+                // Filter for Vegetarian and Swedish recipes if activated
                 if (isVegFilterActive) {
                     filteredData = filteredData.filter(row => row[6]?.toLowerCase() === 'ja');
                 }
@@ -713,7 +723,7 @@
             }
         }
 
-       
+        // Fortsätt med resten av din JavaScript-kod här...
 
 
 
