--- a/index.html
+++ b/index.html
@@ -706,8 +706,9 @@
 
                 let filteredData = allData.filter(row => {
                     const ingredients = row[1]?.toLowerCase().split(', ').map(ing => ing.trim());
-                    // Ensure that ALL selected tags are present in the ingredient list
-                    return searchIngredients.every(ingredient => ingredients.includes(ingredient));
+                    return searchIngredients.some(searchIngredient =>
+                        searchIngredient.some(ingredient => ingredients.includes(ingredient))
+                    );
                 });
 
                 // Filter for Vegetarian and Swedish recipes if activated
