--- a/index.html
+++ b/index.html
@@ -811,11 +811,11 @@
                 htmlContent += `<div class="matratt">`;
                 htmlContent += `<div class="matratt-title"><h2>${row[0]}</h2></div>`; // Maträttens namn
 
-                // Knapp för att visa ingredienser
+                /* // Knapp för att visa ingredienser
                 htmlContent += `<button class="ingrediens-knapp" onclick="toggleIngredienser(this)">Visa Ingredienser</button>`;
 
                 // Rullista för ingredienser med mouseleave-händelse
-                htmlContent += `<div class="ingrediens-lista" onmouseleave="hideIngredienser(this)">${row[1].split(', ').join('<br>')}</div>`;
+                htmlContent += `<div class="ingrediens-lista" onmouseleave="hideIngredienser(this)">${row[1].split(', ').join('<br>')}</div>`; */
 
                 htmlContent += row[5]; // Instagram-inlägg
                 htmlContent += '</div>';
