la till csskod för att bläddra mellan sökresultatets sidor

--- a/index.html
+++ b/index.html
@@ -510,6 +510,39 @@
             text-align: center;
             border-radius: 5px;
         }
+
+        #pagination-controls button {
+            background-color: white;
+            /* Vit bakgrund */
+            color: black;
+            /* Svart text */
+            border: 1px solid #ddd;
+            /* Lätt grå kantlinje */
+            padding: 10px 15px;
+            /* Padding för att göra knappen större */
+            margin: 5px;
+            /* Avstånd mellan knapparna */
+            border-radius: 5px;
+            /* Lätt rundade hörn */
+            cursor: pointer;
+            /* Ändra muspekaren till en hand när den svävar över knappen */
+            font-size: 1em;
+            /* Storlek på texten */
+            transition: background-color 0.3s;
+            /* Smidig övergång för bakgrundsfärg */
+        }
+
+        #pagination-controls button:hover {
+            background-color: #f0f0f0;
+            /* Ljusgrå bakgrund när muspekaren svävar över */
+        }
+
+        #pagination-controls {
+            text-align: center;
+            /* Centrera pagineringsknapparna */
+            padding: 20px 0;
+            /* Avstånd ovanför och under pagineringskontrollerna */
+        }
     </style>
 </head>
 
