ändrar css för sid siffrorna

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
         #pagination-controls {
             text-align: center;
             /* Centrera pagineringsknapparna */
-            padding: 20px 0;
+            padding: 10px 10px;
             /* Avstånd ovanför och under pagineringskontrollerna */
         }
     </style>
