--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             flex-wrap: wrap;
             justify-content: center;
             margin-top: 25%;
-            padding-bottom: 50px;
+            padding-bottom: 20px;
             overflow: auto;
         }
 
@@ -258,12 +258,6 @@
             margin-top: 0;
             /* Ta bort mellanrummet mellan fält och taggar */
             /* Ta bort border-egenskapen för att eliminera den vita konturen */
-        }
-
-        #data-container {
-            display: flex;
-            flex-wrap: wrap;
-            /* Resten av din CSS för #data-container */
         }
 
         .tag {
@@ -542,8 +536,9 @@
             /* Centrera pagineringsknapparna */
             padding: 30px 0px;
             /* Avstånd ovanför och under pagineringskontrollerna */
+            font-family: 'Indie Flower', cursive;
+            /* Din huvudfont */
         }
-
     </style>
 </head>
 
